2010-02-07  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix warnings in grub-emu when compiling with maximum warning options.

	* util/grub-emu.c (ENABLE_RELOCATABLE): New definition.
	(grub_arch_modules_addr): Return 0 and not NULL.
	* util/misc.c (ENABLE_RELOCATABLE): New definition.
	(xstrdup): USe newstr instead of dup.
	* util/hostdisk.c (grub_util_biosdisk_get_grub_dev): Rename one instance
	of disk to dsk to avoid shadowing.

2010-02-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* loader/i386/linux.c (grub_linux_setup_video): Handle error
	appropriately.

2010-02-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* fs/reiserfs.c (grub_reiserfs_read): Use #if 0 instead of commenting
	code out.

2010-02-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/cache.h (grub_arch_sync_caches) [i386 || x86_64]: Inline.
	* kern/i386/coreboot/init.c (grub_arch_sync_caches): Remove.
	* kern/i386/efi/init.c (grub_arch_sync_caches): Likewise.
	* kern/i386/ieee1275/init.c (grub_arch_sync_caches): Likewise.
	* kern/i386/pc/init.c (grub_arch_sync_caches): Likewise.
	* util/misc.c (grub_arch_sync_caches) [i386 || x86_64]: Likewise.

2010-02-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/err.h (grub_err_printf): Don't export.

2010-02-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/dl.h (grub_dl_register_symbol): Don't export.

2010-02-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/i18n.h (grub_gettext_dummy): Removed.
	* kern/misc.c (grub_gettext_dummy): Make static.

2010-02-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* kern/misc.c (grub_utf8_to_ucs4): Don't eat valid characters preceeded
	by non-valid ones.
	* kern/term.c (grub_putchar): Likewise.

2010-02-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* partmap/sun.c (sun_partition_map_iterate): Restructure flow to fix
	buggy hook call and memory leak.

2010-02-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* commands/ls.c (grub_ls_list_files): Free pathname on exit.
