@@ -25,6 +25,8 @@
 
 #if defined (GRUB_MACHINE_EMU) || defined (GRUB_UTIL)
 #define GRUB_TICKS_PER_SECOND 100000
+/* Return the real time in ticks.  */
+grub_uint32_t EXPORT_FUNC (grub_get_rtc) (void);
 #else
 #include <grub/machine/time.h>
 #endif
